--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,8 +10,7 @@ http {
         proxy_redirect          off;
 
         location /jw {
-            # rewrite ^/i/(.*)$    /api/$1 last;
-            proxy_pass http://joget:7070/jw;
+            proxy_pass http://joget:8080/jw;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -21,7 +20,7 @@ http {
         }
 
         location /alfresco {
-            proxy_pass http://proxy:9090/alfresco;
+            proxy_pass http://proxy:8080/alfresco;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -30,7 +29,7 @@ http {
         }
 
         location /share {
-            proxy_pass http://proxy:9090/share;
+            proxy_pass http://proxy/share;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -38,20 +37,4 @@ http {
             proxy_set_header X-Forworded-Host $server_name;
         }
     }
-
-    # server {
-    #     listen                  9090;
-    #     proxy_redirect          off;
-
-    #     rewrite ^/api/(.*)$    /verify/api/$1 last;
-
-    #     location /verify/ {
-    #         proxy_pass       http://192.168.0.26:8080/;
-    #         proxy_redirect off;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forworded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forworded-Host $server_name;
-    #     }
-    # }
 }
