--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ http {
         }
 
         location /alfresco {
-            proxy_pass http://proxy:8080/alfresco;
+            proxy_pass http://alfresco:8080/alfresco;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -29,7 +29,7 @@ http {
         }
 
         location /share {
-            proxy_pass http://proxy/share;
+            proxy_pass http://share:8080/share;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
