--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,5 +36,9 @@ http {
             proxy_set_header X-Forworded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forworded-Host $server_name;
         }
+
+        location / {
+            proxy_pass http://content-app:8080;
+        }
     }
 }
